Creado el section zona-porcentaje

--- a/Video64APICommunication.html
+++ b/Video64APICommunication.html
@@ -35,8 +35,9 @@
             </section>
         </section>
 
-        <section id="zona-datos">Información no disponible
-            <section id="zona-progreso"></section>
+        <section id="zona-datos">
+            <section id="zona-progreso">Información no disponible</section>
+            <section id="zona-porcentaje"></section>
         </section>
     </section>
 
